--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"dependencies": {
 		"@octokit/graphql": "^4.8.0",
+		"can-smerge": "file:../../MLH/can-merge-main",
 		"chalk": "^4.1.2",
 		"dotenv": "^10.0.0",
 		"git-repo-info": "^2.1.1",
